--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ input[type="submit"]{
 </head>
 
 <body>
-<img src="img/IMG_5392.jpg"/>
+<img src="IMG_5392.jpg"/>
 <h1>Dung.Do</h1>
 <p>I'm Graphic web design instructor</p>
 <input type="email" placeholder="email">
