--- a/index.html
+++ b/index.html
@@ -34,8 +34,14 @@ input[type="submit"]{
 <img src="IMG_5392.jpg"/>
 <h1>Dung.Do</h1>
 <p>I'm Graphic web design instructor</p>
-<input type="email" placeholder="email">
-<input type="submit">
+
+<form action="https://formspree.io/dohuyendung@gmail.com"
+      method="POST">
+    <input type="text" name="name">
+    <input type="email" name="_replyto">
+    <input type="submit" value="Send">
+</form>	
+	
 
 </body>
 </html>
