--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@ input[type="submit"]{
 
 <form action="https://formspree.io/dohuyendung@gmail.com"
       method="POST">
-    <input type="text" name="name">
-    <input type="email" name="_replyto">
+    <input type="text" name="ho ten">
+    <input type="email" name="email">
     <input type="submit" value="Send">
 </form>	
 	
